Bug 458539 - 'Show Cookies' fails, logs NSArray exception to Console when site has set a cookie with a null name. Patch by Chris Lawson <cl-bugs-new@chrislawson.net>, r=smorgan, sr=pink, a/Cm1.6.7=me